# pan-masking-validator

./: README.md  pyproject.toml
src/: cli.py  validator.py
tests/: test_cli.py  test_validator.py
